--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "firebase": "^9.0.1",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "reactfire": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
