--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "reactfire": "^4.1.0"
+    "reactfire": "^4.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@types/uuid": "^8.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
