--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
     "reactfire": "^4.1.0",
     "uuid": "^8.3.2"
