--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "firebase": "^9.0.1",
+    "firebase": "^8.10.0",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
-    "reactfire": "^4.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
