--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "firebase": "^9.1.1",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
