--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.3.1",
+    "react-select": "^5.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
