--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "chakra-react-select": "^1.3.3",
     "firebase": "^9.1.1",
     "framer-motion": "^4",
     "next": "11.1.2",
