--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
+    "@types/react": "^17.0.37",
     "@types/uuid": "^8.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
