--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && cp out/404/index.html out/404.html",
     "deploy": "firebase deploy --only hosting",
     "start": "next start",
     "lint": "next lint",
