--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.3.1",
