--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
-    "typescript": "4.4.2"
+    "typescript": "^4.5.4"
   }
 }
