--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 name: CI
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
   workflow_dispatch:
@@ -35,24 +35,3 @@ jobs:
         with:
           name: out
           path: out
-
-  deploy:
-    needs: [build]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: out
-          path: out
-
-      - name: Deploy
-        uses: w9jds/firebase-action@v2.0.0
-        with:
-          args: deploy
-        env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
