--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:firebase": "firebase emulators:start",
+    "start:emulator": "firebase emulators:start",
+    "kill:emulator": "sh ./killEmulator.sh",
     "build": "next build && next export && cp out/404/index.html out/404.html",
     "deploy": "firebase deploy --only hosting",
     "start": "next start",
