--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "chakra-react-select": "^1.3.3",
     "firebase": "^9.1.1",
+    "focus-visible": "^5.2.0",
     "fp-ts": "^2.11.9",
     "framer-motion": "^4",
     "idb-keyval": "^6.1.0",
