--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:e2e": "playwright test --headed"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.7",
+    "@chakra-ui/react": "1.8.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/react-beautiful-dnd": "^13.1.2",
@@ -24,7 +24,7 @@
     "firebase": "^9.1.1",
     "focus-visible": "^5.2.0",
     "fp-ts": "^2.11.9",
-    "framer-motion": "^4",
+    "framer-motion": "^6.3.3",
     "idb-keyval": "^6.1.0",
     "io-ts": "^2.2.16",
     "next": "11.1.2",
