--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           path: out
 
       - name: Deploy
-        uses: w9jds/firebase-action@v2.0.0
+        uses: docker://w9jds/firebase-action:master
         with:
           args: deploy
         env:
