--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
