--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "start:emulator": "firebase emulators:start  --import=./firebase-data --export-on-exit",
+    "start:emulator": "yarn kill:emulator && firebase emulators:start  --import=./firebase-data --export-on-exit",
     "kill:emulator": "sh ./killEmulator.sh",
     "build": "next build && next export && cp out/404/index.html out/404.html",
     "deploy": "firebase deploy --only hosting",
